fix spacing

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,8 +1,3 @@
 header {
   border-bottom: $thin $style $color;
-  .header {
-    nav.nav {
-      text-align: right;
-    }
-  }
 }
